# python-project-lvl3

./: .gitignore  .travis.yml  Makefile  README.md  pyproject.toml
page_loader/: constants.py  creators.py  engine.py  getters.py  logger.py  normalizers.py
page_loader/script/: page_loader.py
tests/: test_first.py
tests/data/: index.html
