[tool.poetry]
name = "lelikov-page_loader"
version = "0.3.0"
description = "Web page loader"
authors = ["Alexandr Lelikov <lelikovas@gmail.com>"]
packages = [{ include = "page_loader" }]
repository = "https://github.com/Lelikov/python-project-lvl3"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3.8",
  "Environment :: Console",
  "Natural Language :: English",
  ]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.22.0"
beautifulsoup4 = "^4.8.2"
progress = "^1.5"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"
pytest-cov = "^2.8.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
page-loader = "page_loader.script.page_loader:main"